--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-web": "~0.20.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "expo-router": "~5.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
